# .dotfiles

./: .gitignore  install_nikhef  install_personal  install_picnic  nikhef
alacritty/.config/alacritty/: alacritty.toml
applications/.config/: mimeapps.list
apt-packages/.config/install-packages/: packages.txt
borg/.config/borg/: homedir-patterns  patterns.txt
bshell/.config/shell/: exports.sh  paths.sh  prompt.sh
dconf/.config/dconf/: dconf.user.txt
direnv/.config/direnv/: direnvrc
dirs/.config/: user-dirs.dirs
dunst/.config/dunst/: dunstrc
exiftool/.config/exiftool/: ExifTool_config
gammastep/.config/gammastep/: config.ini
handlr/.config/handlr/: handlr.toml
lf/.config/lf/: cleaner  icons  lfcd.sh  lfrc  preview  previewer
librewolf/.librewolf/: librewolf.overrides.cfg
mamba/.config/mamba/: mambarc
mimes/.config/: mimeapps.list
newsboat/.config/newsboat/: config  urls
nikhef/: .env
nvim/.config/nvim/: init.lua  init.vim
personal/: .env  .pacman.pkglist
picnic/: .Brewfile  .env  packages
shell/: .bash_profile  .bashrc  .profile
shell/.config/shell/: aliases.sh  exports.sh  funs.sh  inputrc.sh  paths.sh  prompt.sh
sway/.config/sway/: bar  config
swaynag/.config/swaynag/: config
templates/Docs/templates/python/: pyproject.toml
tmux/.config/tmux/: tmux.conf
tofi/.config/tofi/: config
urlview/: .urlview
xdg-desktop-portal-wlr/.config/xdg-desktop-portal-wlr/: config
xdg-user-dirs/.config/: user-dirs.dirs
zathura/.config/zathura/: zathurarc
zshell/: .zprofile  .zshrc
zshell/.config/shell/: aliases.sh  exports.sh  (+5 more)
(+60 files in other folders)
